@@ -1,52 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=[[$charset]]">
-    <title>[[$application_title]]</title>
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=[[$charset]]" />
+<title>[[$application_title]]</title>
 
-<script type="text/javascript">
-function correctPNG() // correctly handle PNG transparency in Win IE 5.5 or higher.
-   {
-   var agt = navigator.userAgent.toLowerCase();
-   var is_ie = ((agt.indexOf("msie") != -1) && (agt.indexOf("opera") == -1));
-   if (!is_ie) return;
+<script type="text/javascript" src="[[$tpl_path]]/p4a.js"></script>
+[[foreach from=$css key=k item=v ]]
+<link href="[[$v.0]]" rel="stylesheet" type="text/css" media="[[$v.1]]" />
+[[/foreach]]
 
-   for(var i=0; i<document.images.length; i++)
-      {
-          var img = document.images[i]
-          var imgName = img.src.toUpperCase()
-          if (imgName.substring(imgName.length-3, imgName.length) == "PNG")
-             {
-                 var imgID = (img.id) ? "id='" + img.id + "' " : ""
-                 var imgClass = (img.className) ? "class='" + img.className + "' " : ""
-                 var imgTitle = (img.title) ? "title='" + img.title + "' " : "title='" + img.alt + "' "
-                 var imgStyle = "display:inline-block;" + img.style.cssText
-                 var imgAttribs = img.attributes;
-                 for (var j=0; j<imgAttribs.length; j++)
-                        {
-                        var imgAttrib = imgAttribs[j];
-                        if (imgAttrib.nodeName == "align")
-                           {
-                           if (imgAttrib.nodeValue == "left") imgStyle = "float:left;" + imgStyle
-                           if (imgAttrib.nodeValue == "right") imgStyle = "float:right;" + imgStyle
-                           break
-                           }
-            }
-                 var strNewHTML = "<span " + imgID + imgClass + imgTitle
-                 strNewHTML += " style=\"" + "width:" + img.width + "px; height:" + img.height + "px;" + imgStyle + ";"
-             strNewHTML += "filter:progid:DXImageTransform.Microsoft.AlphaImageLoader"
-                 strNewHTML += "(src=\'" + img.src + "\', sizingMethod='image');\" ></span>"
-                 img.outerHTML = strNewHTML
-                 i = i-1
-             }
-      }
-   }
-</script>
-
-    [[foreach from=$css key=k item=v ]]
-    <link href="[[$v.0]]" rel="stylesheet" type="text/css" media="[[$v.1]]">
-    [[/foreach]]
-    <style type="text/css">
+<style type="text/css">
     [[assign var="toppx" value="0"]]
     [[if isset($menu)]]
 	     [[assign var="toppx" value="25"]]
@@ -58,64 +21,64 @@ function correctPNG() // correctly handle PNG transparency in Win IE 5.5 or high
 	     [[assign var="toppx" value="80"]]
     [[/if]]
 
-      body {
-			height: 100%;
-	      	width:100%;
-    	  	padding:0px;
-      		margin:0px;
-	      	border:0px;
-      }
+	body {
+		height: 100%;
+		width:100%;
+		padding:0px;
+		margin:0px;
+		border:0px;
+	}
 
 
-      #sheetContainer>.sheet,#sheetContainer>fieldset{
-      	margin-left:auto;
-      	margin-right:auto;
-      }
+	#sheetContainer>.sheet,#sheetContainer>fieldset{
+		margin-left:auto;
+		margin-right:auto;
+	}
 
-      #topContainer {
-			width:100%;
-			position:fixed;
-			top: 0px;
-			z-index:2;
-      }
+	#topContainer {
+		width:100%;
+		position:fixed;
+		top: 0px;
+		z-index:2;
+	}
 
-      #mainContainer {
-		   	width:100%;
-	      	position:absolute;
-	      	text-align:center;
-      }
+	#mainContainer {
+		width:100%;
+		position:absolute;
+		text-align:center;
+	}
 
-      #footerContainer {
-	  		clear: both;
-            text-align: center;
-			margin-top: 10px;
-      }
+	#footerContainer {
+		clear: both;
+		text-align: center;
+		margin-top: 10px;
+	}
 
-      @media screen {
-	      #mainContainer {
-				 top:[[$toppx]]px;
-	      }
-	  }
+	@media screen {
+		#mainContainer {
+			top:[[$toppx]]px;
+		}
+	}
 
-      @media print {
-	      #mainContainer {
-				top:0px;
-	      }
+	@media print {
+		#mainContainer {
+			top:0px;
+		}
 
-	      #topContainer {
-				visibility:hidden;
-	      }
-	  }
-    </style>
-  </head>
+		#topContainer {
+			visibility:hidden;
+		}
+	}
+</style>
+</head>
 
-  [[if $focus_id]]
-  <body onLoad="setFocus('[[$focus_id]]'); correctPNG();">
-  [[else]]
-  <body>
-  [[/if]]
+[[if $focus_id]]
+<body onload="setFocus('[[$focus_id]]'); correctPNG();">
+[[else]]
+<body>
+[[/if]]
 
-  	[[$mask_open]]
+[[$mask_open]]
 
 	[[if isset($sidebar)]]
 	<div id="sidebar" class="border_color4 background_box">
@@ -151,6 +114,6 @@ function correctPNG() // correctly handle PNG transparency in Win IE 5.5 or high
 		<div id="footerContainer">Powered by <a href="http://p4a.sourceforge.net">P4A - PHP For Applications</a></div>
 	</div>
 
-	[[$mask_close]]
-  </body>
+[[$mask_close]]
+</body>
 </html>
